Collection of CSS fixes
This ensures all parameter tables are 100% wide, even if they have
only a few items with short descriptions. It makes all the tables the
same width.

This moves the link icon into the gutter for the main content, and
makes it hidden by default (only visible on hover) like in the API
site today.

This makes the link + method name div be ``white-space: nowrap`` to
ensure that when the screen gets narrower the Delete button doesn't
fold up on itself.

Part of bp:api-ref-in-rst

--- a/api-ref/source/_static/api-site.css
+++ b/api-ref/source/_static/api-site.css
@@ -55,3 +55,27 @@ div.document {
     padding-top: 0.5em;
     padding-bottom: 1em;
 }
+
+/* Ensure the method buttons and their links don't split lines when
+the page is narrower */
+.operation {
+    /* this moves the link icon into the gutter */
+    margin-left: -1.25em;
+    margin-right: 1.25em;
+    white-space: nowrap;
+}
+
+/* These make the links only show up on hover */
+a.operation-anchor {
+  visibility: hidden;
+}
+
+.operation-grp:hover a.operation-anchor {
+  visibility: visible;
+}
+
+/* All tables for requests should be full width */
+
+.api-detail table.docutils {
+    width: 100%;
+}
